--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -2,8 +2,8 @@
 
 [alembic]
 # template used to generate migration files
-script_location = %(here)s/migrations
-file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
+# file_template = %%(rev)s_%%(slug)s
+
 # set to 'true' to run the environment during
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
